--- a/menu-gourmet/receitas-doces.html
+++ b/menu-gourmet/receitas-doces.html
@@ -81,7 +81,7 @@
 
 
     <!-- Topo -->
-    <a href="#logo" id="topo"><img src="../img/Seta-para-cima.png" alt="seta topo"></a>
+    <a href="#logo" id="topo"><img src="../img/topo1.png" alt="topo do site"></a>
 
 </body>
 
