--- a/sobre.html
+++ b/sobre.html
@@ -44,23 +44,11 @@
         </div>
     </main>
 
-    <!-- Em Construção -->
-    <section class="Container">
-        <div class="Card">
-            <img src="./img/site.jpg" alt="Em construção">
-            <h3> Em Construção </h3>
-            <p>Este site está em construção.
-             Você pode acompanhar as novidades 
-             pelo nosso instagram.</p>
-            <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
-        </div>
-    </section> 
-
     <!-- Conteúdo Sobre -->
-   <!-- <section id="miqueias">
+    <section id="miqueias">
         <div class="Container FlexSobre">
             <div id="imgSobre">
-                
+                <img src="./img/imgSobre.jpeg" alt="Sobre">
             </div>
             <div id="textoSobre">
                 <h2>Olá!</h2>
@@ -74,7 +62,7 @@
                 <p><span id="autor">(Robert Collier)</span></p>
             </div>
         </div>
-    </section>-->
+    </section>
 
     <!-- Rodapé -->
     <footer>
@@ -97,7 +85,7 @@
 
 
     <!-- Topo -->
-    <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="topo do site"></a>
+    <a href="#logo" id="topo"><img src="./img/topo1.png" alt="topo do site"></a>
 </body>
 
 </html>
