--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
 
 
-    <section class="Container">
+    <section class="Container FlexHome">
         <div class="Texto1">
             <h4> SOBRE A GENTE </h4>
             <h2>Você já conhece o ChefVirtual?</h2>
@@ -270,12 +270,53 @@
     </section>
     <section class="container FlexHome">
         <div class="CardVantagem">
-            <h2>Receitas</h2>
-                <img src="./img/card-home.png" alt="Receita 1">
-            <div class="card-content">
-                <p>Clássico (sem restrições), Sem
-                    Glúten, Sem Glúten e Sem Lactose,
-                    Sem Lactose</p>
+            <img src="./img/card-home.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>Totalmente Grátis</h3>
+                <p>Planeje e prepare as suas refeições com receitas testadas,
+                    práticas e com a lista de compras de tudo o que vai precisar.
+                    E o melhor: Totalmente Grátis.</p>
+            </div>
+        </div>
+        <div class="CardVantagem">
+            <img src="./img/card-home2.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>Alimentação Saudável</h3>
+                <p>Tenha em mãos as receitas para montar o seu cardápio e levar
+                    uma vida mais saudável, longe dos produtos ultraprocessados.</p>
+            </div>
+        </div>
+        <div class="CardVantagem">
+            <img src="./img/card-home3.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>Economia de Tempo e Dinheiro</h3>
+                <p>Gere a lista de compras de suas receitas selecionadas, compre 
+                    apenas o que vai preparar. Evite o desperdício e economize.</p>
+            </div>
+        </div>
+        <div class="CardVantagem">
+            <img src="./img/card-home4.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>Receitas para o Tamanho da sua <br> Família</h3>
+                <p>Ajuste a receita para 2. 4, 6 ou 8 pessoas em um clique! 
+                    Faça o mesmo com a lista de compras.</p>
+            </div>
+        </div>
+        <div class="CardVantagem">
+            <img src="./img/card-home5.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>O que Fazer para o Almoço ou <br> Jantar?</h3>
+                <p>Tenha seu cardápio sempre planejado com as receitas de nossa 
+                    plataforma e inclua também suas próprias receitas.</p>
+            </div>
+        </div>
+        <div class="CardVantagem">
+            <img src="./img/card-home6.png" alt="Receita 1">
+            <div class="texto3">
+                <h3>Receitas Testadas e Classificadas <br> por Nutricionistas</h3>
+                <p>Saia do comum e viva mais saudável com uma alimentação mais 
+                    equilibrada e variada. Todas as receitas são testadas e 
+                    classificadas pela nossa nutricionista.</p>
             </div>
         </div>
     </section>
