--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         </div>
     </section>
 
+    <!-- Carroussel -->
     <section class="Container">
         <div class="carousel-container">
             <div class="carousel">
@@ -263,12 +264,14 @@
         </div>
     </section>
 
-    <section class="container FlexHome">
+
+    <!-- Parte Mais Vantagens -->
+    <section class="container ">
         <div id="Texto1">
             <h2>Mais Vantages</h2>
         </div>
     </section>
-    <section class="container FlexHome">
+    <section class="container ">
         <div class="CardVantagem">
             <img src="./img/card-home.png" alt="Receita 1">
             <div class="texto3">
