--- a/index.html
+++ b/index.html
@@ -48,25 +48,34 @@
     </main>
 
 
-    <section class="Container FlexHome">
-        <div class="Texto1">
-            <h4> SOBRE A GENTE </h4>
-            <h2>Você já conhece o ChefVirtual?</h2>
-            <a href="menu-gourmet.html" class="Button2"> Conheça nossas receitas</a>
+    <section class="Container">
+        <div class="FlexHome">
+            <div class="Texto1">
+                <h4> SOBRE A GENTE </h4>
+                <h2>Você já conhece o ChefVirtual?</h2>
+                <a href="menu-gourmet.html" class="Button2"> Conheça nossas receitas</a>
+            </div>
         </div>
     </section>
 
     <section class="Container">
-        <div class="Card2">
-            <img src="./img/imagem2.png" alt="Em construção">
-            <h3> Em Construção </h3>
-            <p>O site oferece uma ampla variedade de receitas gourmet,
-                desde pratos clássicos refinados até criações
-                inovadoras. Os visitantes são convidados a explorar
-                e descobrir novos sabores e técnicas culinárias,
-                transformando suas refeições em experiências
-                memoráveis, como este incrível Arroz de Bacalhau "A
-                Fugir" com Rúcula.</p>
+        <div class="FlexHome">
+            <div class="Card2">
+                <img src="./img/imagem2.png" alt="Arroz de Bacalhau A
+                Fugir com Rúcula">
+                <h3> PRINCIPAL </h3>
+                <p>O site oferece uma ampla variedade de receitas gourmet,
+                    desde pratos clássicos refinados até criações
+                    inovadoras. Os visitantes são convidados a explorar
+                    e descobrir novos sabores e técnicas culinárias,
+                    transformando suas refeições em experiências
+                    memoráveis, como este incrível Arroz de Bacalhau "A
+                    Fugir" com Rúcula.</p>
+                <div id="img2">
+                    <img src="./img/imagem3.png" alt="Arroz de Bacalhau A
+                        Fugir com Rúcula">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -293,7 +302,7 @@
             <img src="./img/card-home3.png" alt="Receita 1">
             <div class="texto3">
                 <h3>Economia de Tempo e Dinheiro</h3>
-                <p>Gere a lista de compras de suas receitas selecionadas, compre 
+                <p>Gere a lista de compras de suas receitas selecionadas, compre
                     apenas o que vai preparar. Evite o desperdício e economize.</p>
             </div>
         </div>
@@ -301,7 +310,7 @@
             <img src="./img/card-home4.png" alt="Receita 1">
             <div class="texto3">
                 <h3>Receitas para o Tamanho da sua <br> Família</h3>
-                <p>Ajuste a receita para 2. 4, 6 ou 8 pessoas em um clique! 
+                <p>Ajuste a receita para 2. 4, 6 ou 8 pessoas em um clique!
                     Faça o mesmo com a lista de compras.</p>
             </div>
         </div>
@@ -309,7 +318,7 @@
             <img src="./img/card-home5.png" alt="Receita 1">
             <div class="texto3">
                 <h3>O que Fazer para o Almoço ou <br> Jantar?</h3>
-                <p>Tenha seu cardápio sempre planejado com as receitas de nossa 
+                <p>Tenha seu cardápio sempre planejado com as receitas de nossa
                     plataforma e inclua também suas próprias receitas.</p>
             </div>
         </div>
@@ -317,8 +326,8 @@
             <img src="./img/card-home6.png" alt="Receita 1">
             <div class="texto3">
                 <h3>Receitas Testadas e Classificadas <br> por Nutricionistas</h3>
-                <p>Saia do comum e viva mais saudável com uma alimentação mais 
-                    equilibrada e variada. Todas as receitas são testadas e 
+                <p>Saia do comum e viva mais saudável com uma alimentação mais
+                    equilibrada e variada. Todas as receitas são testadas e
                     classificadas pela nossa nutricionista.</p>
             </div>
         </div>
