--- a/index.html
+++ b/index.html
@@ -47,35 +47,41 @@
         </div>
     </main>
 
-
-    <section class="Container">
-        <div class="FlexHome">
-            <div class="Texto1">
-                <h4> SOBRE A GENTE </h4>
-                <h2>Você já conhece o ChefVirtual?</h2>
-                <a href="menu-gourmet.html" class="Button2"> Conheça nossas receitas</a>
-            </div>
+    <section>
+        <div class="conteudo-topo">
+            <h4> SOBRE A GENTE </h4>
+            <h2>Você já conhece o ChefVirtual?</h2>
+            <p>O ChefVirtual é um espaço dedicado à arte da culinária, onde compartilhamos nossa paixão por sabores
+                autênticos e experiências gastronômicas únicas. Nossas receitas são cuidadosamente elaboradas para
+                proporcionar momentos de prazer à mesa, combinando ingredientes frescos, técnicas refinadas e uma pitada
+                de criatividade. Convidamos você a explorar nosso universo culinário e descobrir novos sabores que vão
+                encantar seu paladar.</p>
+            <a href="./menu-gourmet.html"><button>Conheça nossas receitas</button></a>
         </div>
-    </section>
-
-    <section class="Container">
-        <div class="FlexHome">
-            <div class="Card2">
+        <div class="conteudo">
+            <div class="teste2">
                 <img src="./img/imagem2.png" alt="Arroz de Bacalhau A
-                Fugir com Rúcula">
-                <h3> PRINCIPAL </h3>
-                <p>O site oferece uma ampla variedade de receitas gourmet,
-                    desde pratos clássicos refinados até criações
-                    inovadoras. Os visitantes são convidados a explorar
-                    e descobrir novos sabores e técnicas culinárias,
-                    transformando suas refeições em experiências
-                    memoráveis, como este incrível Arroz de Bacalhau "A
-                    Fugir" com Rúcula.</p>
-                <div id="img2">
-                    <img src="./img/imagem3.png" alt="Arroz de Bacalhau A
-                        Fugir com Rúcula">
-                </div>
+            Fugir com Rúcula" class="teste">
             </div>
+            <p>O site oferece uma ampla variedade de receitas gourmet,
+                desde pratos clássicos refinados até criações
+                inovadoras. Os visitantes são convidados a explorar
+                e descobrir novos sabores e técnicas culinárias,
+                transformando suas refeições em experiências
+                memoráveis, como este incrível Arroz de Bacalhau "A
+                Fugir" com Rúcula.</p>
+        </div>
+        <div class="conteudo2">
+            <p>Por outro lado, o Paulista de Legumes com Alga Nori oferece
+                uma abordagem distinta e exótica para os amantes da culinária.
+                Com a combinação única de legumes frescos e a delicada textura
+                da alga nori, esta receita cativa os paladares mais exigentes,
+                adicionando uma dimensão surpreendente ao universo gastronômico.</p>
+            <div class="teste2">
+                <img src="./img/imagem3.png" alt="Arroz de Bacalhau A
+            Fugir com Rúcula" class="teste">
+            </div>
+
         </div>
     </section>
 
