--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 proporcionar momentos de prazer à mesa, combinando ingredientes frescos, técnicas refinadas e uma pitada
                 de criatividade. Convidamos você a explorar nosso universo culinário e descobrir novos sabores que vão
                 encantar seu paladar.</p>
-            <a href="./menu-gourmet.html"><button>Conheça nossas receitas</button></a>
+            <a href="./menu-gourmet.html" class="button">Conheça nossas receitas</a>
         </div>
         <div class="conteudo">
             <div class="teste2">
