--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main id="banner">
         <div class="ContainerEx">
             <h1>Diga Olá</h1>
-            <h2>para sua próxima experiência gastronômica</h2>
+            <h2>Para sua próxima experiência gastronômica</h2>
         </div>
     </main>
 
@@ -85,9 +85,9 @@
         </div>
     </section>
 
-    <section class="Container">
+    <section class="Container-In">
         <div class="Texto2">
-            <h2> INSPIRI-SE! </h2>
+            <h2> INSPIRE-SE! </h2>
             <h4> Dê uma olhada nessas receitas... </h4>
         </div>
     </section>
