--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -49,23 +49,93 @@
     <!-- Links Para os Conteudos-->
     <section class="Container">
         <div id="h3">
-        <h3>Receitas</h3>
+            <h3>Receitas</h3>
         </div>
-        <ul id="link">
-            <li><a href="./menu-gourmet/receitas-doces.html">Receitas Doces</a></li>
-            <li><a href="./menu-gourmet/receitas-salgadas.html">Receitas Salgadas</a></li>
-        </ul>
+        <div class="botao-menu">
+            <a href="./menu-gourmet/receitas-doces.html" class="button2">Receitas Doces</a>
+            <a href="./menu-gourmet/receitas-salgadas.html" class="button2">Receitas Salgadas</a>
+        </div>
     </section>
 
-    <!-- Em Construção -->
-    <section class="Container">
-        <div class="Card">
-            <img src="./img/site.jpg" alt="Em construção">
-            <h3> Em Construção </h3>
-            <p>Este site está em construção.
-                Você pode acompanhar as novidades
-                pelo nosso instagram.</p>
-            <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
+    <section class="Container-menu">
+        <div class="carroussel-container-menu">
+            <a href="http://www.instagram.com/" target="_blank" class="carousel-menu">
+                <div class="Card-menu">
+                    <img src="./img/imagem1.png" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="http://www.instagram.com/" target="_blank">
+                <div class="Card-menu">
+                    <img src="./img/site.jpg" alt="Em construção">
+                    <div class="text-menu">
+                        <h3> Em Construção </h3>
+                        <p>Este site está em construção.
+                            Você pode acompanhar as novidades
+                            pelo nosso instagram.</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
