--- a/contato.html
+++ b/contato.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main id="banner2">
+    <main class="banner">
         <div class="Container">
             <h1>Contato</h1>
             <h2>Fale conosco</h2>
