--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <header>
       <div class="ContainerEx FlexMenu">
         <div id="logo">
-          <a href="./index.html"><img src="./assets/img/logo.png" alt="Logo" /></a>
+          <a href="./index.html"
+            ><img src="./assets/img/logo.png" alt="Logo"
+          /></a>
         </div>
         <nav>
           <input type="checkbox" id="check" />
@@ -39,8 +41,8 @@
     </header>
 
     <!-- Destaque -->
-    <main id="banner">
-      <div class="ContainerEx">
+    <main class="banner">
+      <div class="Container">
         <h1>Diga Olá</h1>
         <h2>Para sua próxima experiência gastronômica</h2>
       </div>
@@ -101,203 +103,216 @@
       </div>
     </section>
 
-    <section class="Container-In">
-      <div class="Texto2">
-        <h2>INSPIRE-SE!</h2>
-        <h4>Dê uma olhada nessas receitas...</h4>
-      </div>
-    </section>
-
     <!-- Carroussel -->
-    <section class="Container">
+    <section class="carousel-section">
+      <div class="Container-In">
+        <div class="Texto2">
+          <h2>INSPIRE-SE!</h2>
+          <h4>Dê uma olhada nessas receitas...</h4>
+        </div>
+      </div>
+
       <div class="carousel-container">
-        <div class="carousel">
-          <div class="Card">
-            <img src="./assets/img/imagem2.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>PRINCIPAL</h3>
-              <p>
-                Clássico (sem restrições), Sem Glúten, Sem Glúten e Sem Lactose,
-                Sem Lactose
-              </p>
-              <h2>ARROZ DE BACALHAU "A FUGIR" COM RÚCULA</h2>
-              <p>
-                Um arroz bem português, combinado com uma saladinha refrescante.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>00:45</p>
-              </div>
-            </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem1.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>
-                Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
-                Vegetariano
-              </p>
-              <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-              <p>
-                Uma mousse de maracujá deliciosa, saudável e prática, sem leite
-                condensado, creme de leite e ovos.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
+        <button class="carousel-btn prev" aria-label="Receitas anteriores">
+          ‹
+        </button>
+
+        <div class="carousel-wrapper">
+          <div class="carousel">
+            <div class="Card">
+              <img src="./assets/img/imagem2.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>PRINCIPAL</h3>
                 <p>
-                  00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  Clássico (sem restrições), Sem Glúten, Sem Glúten e Sem
+                  Lactose, Sem Lactose
                 </p>
-              </div>
-            </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem3.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>PRINCIPAL</h3>
-              <p>
-                Clássico (sem restrições), Sem Glúten, Sem Glúten e Sem Lactose,
-                Sem Lactose, Vegano, Vegetariano
-              </p>
-              <h2>CUSCUZ PAULISTA DE LEGUMES COM ALGA NORI</h2>
-              <p>
-                Um prato muito típico da cozinha regional brasileira, só que com
-                um sabor diferente.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>01:00</p>
-              </div>
-            </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem4.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>
-                Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
-                Vegetariano
-              </p>
-              <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-              <p>
-                Uma mousse de maracujá deliciosa, saudável e prática, sem leite
-                condensado, creme de leite e ovos.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
+                <h2>ARROZ DE BACALHAU "A FUGIR" COM RÚCULA</h2>
                 <p>
-                  00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  Um arroz bem português, combinado com uma saladinha
+                  refrescante.
                 </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>00:45</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem5.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>
-                Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
-                Vegetariano
-              </p>
-              <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-              <p>
-                Uma mousse de maracujá deliciosa, saudável e prática, sem leite
-                condensado, creme de leite e ovos.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
+            <div class="Card">
+              <img src="./assets/img/imagem1.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
                 <p>
-                  00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
+                  Vegetariano
                 </p>
+                <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                <p>
+                  Uma mousse de maracujá deliciosa, saudável e prática, sem
+                  leite condensado, creme de leite e ovos.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>
+                    00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem6.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>
-                Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegetariano
-              </p>
-              <h2>MASSA CHOUX SEM GLÚTEN E SEM LACTOSE</h2>
-              <p>
-                A tradicional receita francesa, da massa choux, adaptada sem
-                leite e sem trigo, com excelentes resultados.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>01:00 + tempo de esfriar</p>
+            <div class="Card">
+              <img src="./assets/img/imagem3.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>PRINCIPAL</h3>
+                <p>
+                  Clássico (sem restrições), Sem Glúten, Sem Glúten e Sem
+                  Lactose, Sem Lactose, Vegano, Vegetariano
+                </p>
+                <h2>CUSCUZ PAULISTA DE LEGUMES COM ALGA NORI</h2>
+                <p>
+                  Um prato muito típico da cozinha regional brasileira, só que
+                  com um sabor diferente.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>01:00</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem7.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>ACOMPANHAMENTO</h3>
-              <p>
-                Clássico (sem restrições), Low Carb, Sem Glúten, Vegetariano
-              </p>
-              <h2>MANTEIGA GHEE</h2>
-              <p>
-                Veja como fazer em casa a manteiga ghee - uma opção saudável e
-                deliciosa para a preparação de receitas.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>00:15 + tempo de esfriar</p>
+            <div class="Card">
+              <img src="./assets/img/imagem4.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
+                <p>
+                  Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
+                  Vegetariano
+                </p>
+                <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                <p>
+                  Uma mousse de maracujá deliciosa, saudável e prática, sem
+                  leite condensado, creme de leite e ovos.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>
+                    00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem8.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>PRINCIPAL</h3>
-              <p>Clássico (sem restrições), Sem Lactose</p>
-              <h2>BIFE À MILANESA NA AIRFRYER</h2>
-              <p>
-                Um bife à milanesa, douradinho e crocante, sem óleo, na
-                Airfryer.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>00:45 + tempo para preparar mais porções</p>
+            <div class="Card">
+              <img src="./assets/img/imagem5.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
+                <p>
+                  Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano,
+                  Vegetariano
+                </p>
+                <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                <p>
+                  Uma mousse de maracujá deliciosa, saudável e prática, sem
+                  leite condensado, creme de leite e ovos.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>
+                    00:25 + tempo para demolhar as castanhas e gelar o maracujá
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem9.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>Clássico (sem restrições), Vegetariano</p>
-              <h2>TRUFAS DE LIMÃO E CHOCOLATE</h2>
-              <p>
-                Um azedinho que contrasta com o chocolate, muito fáceis de
-                preparar - é só fazer as bolinhas e depois passar direto no
-                cacau em pó.
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>00:45 + tempo de esfriar</p>
+            <div class="Card">
+              <img src="./assets/img/imagem6.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
+                <p>
+                  Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegetariano
+                </p>
+                <h2>MASSA CHOUX SEM GLÚTEN E SEM LACTOSE</h2>
+                <p>
+                  A tradicional receita francesa, da massa choux, adaptada sem
+                  leite e sem trigo, com excelentes resultados.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>01:00 + tempo de esfriar</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="Card">
-            <img src="./assets/img/imagem10.png" alt="Receita 1" />
-            <div class="card-content">
-              <h3>SOBREMESA</h3>
-              <p>Clássico (sem restrições), Vegetariano</p>
-              <h2>MAÇÃS ASSADAS COM CANELA E LIMÃO E CRUMBLE DE GENGIBRE</h2>
-              <p>
-                A suculência e a doçura das maçãs assadas, para servir com um
-                delicioso crumble de gengibre, bem crocante e sequinho
-              </p>
-              <div class="relogio">
-                <img src="./assets/img/relogio1.png" alt="clock" />
-                <p>1:15</p>
+            <div class="Card">
+              <img src="./assets/img/imagem7.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>ACOMPANHAMENTO</h3>
+                <p>
+                  Clássico (sem restrições), Low Carb, Sem Glúten, Vegetariano
+                </p>
+                <h2>MANTEIGA GHEE</h2>
+                <p>
+                  Veja como fazer em casa a manteiga ghee - uma opção saudável e
+                  deliciosa para a preparação de receitas.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>00:15 + tempo de esfriar</p>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <img src="./assets/img/imagem8.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>PRINCIPAL</h3>
+                <p>Clássico (sem restrições), Sem Lactose</p>
+                <h2>BIFE À MILANESA NA AIRFRYER</h2>
+                <p>
+                  Um bife à milanesa, douradinho e crocante, sem óleo, na
+                  Airfryer.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>00:45 + tempo para preparar mais porções</p>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <img src="./assets/img/imagem9.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
+                <p>Clássico (sem restrições), Vegetariano</p>
+                <h2>TRUFAS DE LIMÃO E CHOCOLATE</h2>
+                <p>
+                  Um azedinho que contrasta com o chocolate, muito fáceis de
+                  preparar - é só fazer as bolinhas e depois passar direto no
+                  cacau em pó.
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>00:45 + tempo de esfriar</p>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <img src="./assets/img/imagem10.png" alt="Receita 1" />
+              <div class="card-content">
+                <h3>SOBREMESA</h3>
+                <p>Clássico (sem restrições), Vegetariano</p>
+                <h2>MAÇÃS ASSADAS COM CANELA E LIMÃO E CRUMBLE DE GENGIBRE</h2>
+                <p>
+                  A suculência e a doçura das maçãs assadas, para servir com um
+                  delicioso crumble de gengibre, bem crocante e sequinho
+                </p>
+                <div class="relogio">
+                  <img src="./assets/img/relogio1.png" alt="clock" />
+                  <p>1:15</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+
+        <button class="carousel-btn next" aria-label="Próximas receitas">
+          ›
+        </button>
+
+        <div class="carousel-dots"></div>
       </div>
     </section>
 
@@ -307,6 +322,7 @@
         <h2>Mais Vantages</h2>
       </div>
     </section>
+
     <section class="container">
       <div class="CardVantagem">
         <img src="./assets/img/card-home.png" alt="Receita 1" />
@@ -405,6 +421,10 @@
     </footer>
 
     <!-- Topo -->
-    <a href="#logo" id="topo"><img src="./assets/img/topo1.png" alt="seta topo" /></a>
+    <a href="#logo" id="topo"
+      ><img src="./assets/img/topo1.png" alt="seta topo"
+    /></a>
+
+    <script src="./assets/js/carrousel.js"></script>
   </body>
 </html>
