--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -9,11 +9,11 @@
     <title>Venha Descobrir...</title>
 
     <!-- Link com a folha de estilo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- Iportante para SEO-->
     <meta name="descripition" content="Um site dedicado ao ensino de receitas gourmet como você nunca viu.">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="./assets/img/logo.png" />
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main id="banner3">
+    <main class="banner">
         <div class="Container">
             <h1>Menu Gourmet</h1>
             <h2>Venha se deliciar</h2>
