--- a/sobre.html
+++ b/sobre.html
@@ -9,11 +9,11 @@
     <title>Olá! Venha Nos Conhecer</title>
 
     <!-- Link com a folha de estilo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- Iportante para SEO-->
     <meta name="descripition" content="Miquéias Rodrigues.">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="./assets/img/logo.png" />
 
 <body>
     <!-- Cabeçalho -->
@@ -37,7 +37,7 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main id="banner2">
+    <main class="banner">
         <div class="Container">
             <h1>Sobre</h1>
             <h2>Venha nos conhecer</h2>
