Modificando uns negocio ali
Arrumando a parte "Sobre a Gente" , tentado estilizar para UI melhor

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     </header>
 
     <!-- Destaque -->
-    <main class="banner">
+    <main id="banner">
       <div class="Container">
         <h1>Diga Olá</h1>
         <h2>Para sua próxima experiência gastronômica</h2>
       </div>
     </main>
 
-    <section>
+    <section id="container-home">
       <div class="container-h">
         <div class="conteudo-topo">
           <h4>SOBRE A GENTE</h4>
@@ -62,16 +62,13 @@
             você a explorar nosso universo culinário e descobrir novos sabores
             que vão encantar seu paladar.
           </p>
-          <a href="./menu-gourmet.html" class="button"
-            >Conheça nossas receitas</a
-          >
+          <a href="./menu-gourmet.html" class="button">Conheça nossas receitas</a>
         </div>
-        <div class="conteudo">
+        <div class="conteudo-m">
           <div class="conteudo_img">
             <img
               src="./assets/img/imagem2.png"
-              alt="Arroz de Bacalhau A
-            Fugir com Rúcula"
+              alt="..."
               class="cont"
             />
           </div>
@@ -83,7 +80,7 @@
             como este incrível Arroz de Bacalhau "A Fugir" com Rúcula.
           </p>
         </div>
-        <div class="conteudo2">
+        <div class="conteudo-f">
           <p>
             Por outro lado, o Paulista de Legumes com Alga Nori oferece uma
             abordagem distinta e exótica para os amantes da culinária. Com a
@@ -94,8 +91,7 @@
           <div class="conteudo_img">
             <img
               src="./assets/img/imagem3.png"
-              alt="Arroz de Bacalhau A
-            Fugir com Rúcula"
+              alt="..."
               class="cont"
             />
           </div>
@@ -317,13 +313,13 @@
     </section>
 
     <!-- Parte Mais Vantagens -->
-    <section class="container">
+    <section id="vantagens-container">
       <div id="Texto1">
         <h2>Mais Vantages</h2>
       </div>
     </section>
 
-    <section class="container">
+    <section id="vantagens-container">
       <div class="CardVantagem">
         <img src="./assets/img/card-home.png" alt="Receita 1" />
         <div class="texto3">
